CPG-DEV/src/objects/RelatedEnterpriseRecords__c.object
<CustomObject>
    <description>Foreign Keys from ERP and other Enterprise Applications</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Related_Enterprise_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>SAP TCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP TC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AForce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEOS SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS SAP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business</label>
        <referenceTo>BusinessDetail__c</referenceTo>
        <relationshipName>Related_Enterprise_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_ID__c</fullName>
        <externalId>true</externalId>
        <label>ERP ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Name__c</fullName>
        <label>ERP Name</label>
        <picklist>
            <picklistValues>
                <fullName>SAP TCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP TC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AForce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEOS SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS SAP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Foreign_Key__c</fullName>
        <externalId>true</externalId>
        <label>Foreign Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>ERP Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Business__c</columns>
        <columns>Application__c</columns>
        <columns>Foreign_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERP-{000}</displayFormat>
        <label>ERP Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>